# vertwallet-android

./: .gitmodules  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/breadwallet/: BreadApp.java
app/src/main/java/com/breadwallet/presenter/activities/settings/: AboutActivity.java
app/src/main/java/com/breadwallet/presenter/fragments/: FragmentReceive.java  FragmentRequestAmount.java
app/src/main/java/com/breadwallet/tools/animation/: BRAnimator.java
app/src/main/java/com/breadwallet/tools/manager/: BRApiManager.java  BRSharedPrefs.java
app/src/main/java/com/breadwallet/tools/security/: BitcoinUrlHandler.java
app/src/main/java/com/breadwallet/tools/util/: BRConstants.java  BRExchange.java
app/src/main/java/com/platform/: APIClient.java
app/src/main/jni/transition/: core.c  wallet.c
app/src/main/res/layout/: activity_about.xml  activity_bread.xml  activity_intro.xml  activity_pin.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
